      WHITE_UDP_FORWARD -> WHITE_UDP_FWD
      WHITE_IP_FORWARD -> WHITE_IP_FWD
  * dropped code for transition 2011-05-28: remove old master blocklists
  * improved the test for kernel REJECT support
  * blocklists: removed atma_atma, no more provided by iblocklist
  * pglcmd test_net: Create BLOCKLISTS_DIR if missing
    Closes: https://sourceforge.net/p/peerguardian/bugs/328/

  [cader]
  * Update nfq_set_verdict_mark calls to nfq_set_verdict2
  * Change declaration of "payload" to match what NFQ expects

 -- jre <jre-phoenix@users.sourceforge.net>  Wed, 29 Jan 2014 16:40:30 +0100


pgl 2.2.4

  [freemind]
  * Fixed bug when reading /etc/services file in OpenSUSE.
  * Added addNames method and improved addProtocols method.

  [jre]
  * init: removed hint how to reenable automatic start.
  * documentation updates

 -- jre <jre-phoenix@users.sourceforge.net>  Sun, 26 Jan 2014 23:50:14 +0100


pgl 2.2.3

  [jre]
  * use conntrack instead of state netfilter module
  * check all traffic that is not related/established (instead of all new
    traffic)
  * added systemd file by Pierre Buard, tested for months by the Arch Linux
    guinea pigs. Thanks!
    Closes: https://sourceforge.net/p/peerguardian/patches/2/
    Note: pglgui still needs to be adapted.
  * fix: (re-)enable MARKing for incoming matched packets.
    Thanks Jason Hill,
    https://sourceforge.net/p/peerguardian/discussion/446996/thread/ed9a443f
  * added support for packed (zip, gz, 7z) local blocklists in pglcmd, the
    same way it is already supported for remote blocklists
    NOTE: pgld already had builtin support for gz packed lists, if it was
    compiled with zlib support.
  * use sed instead of echo to add newline at end of blocklist
  * cd / after downloading blocklists (instead of only cd'ing into the
    directory, but not leaving again)
  * init: added firewalld and moved $syslog to Should-Start|Stop
  * BUILD: added AUTOMAKE_OPTIONS = subdir-objects

  [hasufell]