@@ -223,6 +223,15 @@ IPTABLES_TARGET="NFQUEUE"
 # Valid queue numbers are 0 to 65535.
 NFQUEUE_NUMBER="92"
 
+# Set kernel queue maximum length.
+# Sets the size of the queue in kernel. This fixes the maximum number of packets
+# the kernel will store before internally before dropping upcoming packets.
+# Use this if you get ENOBUFS errors in the pgld.log.
+# Valid range: 0 - 2147483647
+# If the value is not in the valid range this option will be ignored and the
+# size of the queue will stay at its default.
+NFQUEUE_MAXLEN=""
+
 # Set the iptables MARK that is assigned to matched packets (IP is in the
 # blocklist).
 # MARKed packets repeat the complete hook function. Further iptables rules
